--- a/templates/planner/childEntries.html
+++ b/templates/planner/childEntries.html
@@ -48,10 +48,10 @@
             <div>
                 <div>
                     <div {{ child.color }};>
-                        {{ child.first_name|first }}
+                        {{ child.name|first }}
                     </div>
                     <div>
-                        <h2>{{ child.first_name }}'s Entries</h2>
+                        <h2>{{ child.name }}'s Entries</h2>
                         <p>{{ entries.count }} total entries</p>
                     </div>
                 </div>
