--- a/templates/planner/childEntries.html
+++ b/templates/planner/childEntries.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ child.first_name }}'s Entries</title>
+    <title>{{ child.name }}'s Entries</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
                 <div>
                     <div>
                         <h1>ParentPlanner</h1>
-                        <p>{{ child.first_name }}'s entries</p>
+                        <p>{{ child.name }}'s entries</p>
                     </div>
                 </div>
                 <div>
