--- a/templates/planner/addEntry.html
+++ b/templates/planner/addEntry.html
@@ -34,7 +34,12 @@
                     <div>
                         {% if messages %}
                             {% for message in messages %}
-                                <div {% if message.tags == 'success' %}{% endif %}>
+                                <div>
+                                    {% if message.tags == 'success' %}
+                                        <!-- Success styling can be added here -->
+                                    {% elif message.tags == 'error' %}
+                                        <!-- Error styling can be added here -->
+                                    {% endif %}
                                     {{ message }}
                                 </div>
                             {% endfor %}
